added grade calculator endpoint
